duniverse/menhirLib.20200211/test/static/good/unreachable-symbol.mly
%token FOO
%start main
%type <unit> main

%%

main:
  FOO
    { () }

bar:
  main
    { $1 }

